# outlook-cli

./: .gitignore  CLAUDE.md  DESIGN.md  SETUP.md  mock_data.json  pyproject.toml
outlook_cli/: base.py  cli.py  com.py  mock.py  tui.py
